# sgx-decryptfile

./: .gitignore  Makefile  Readme.md
app/: Cargo.toml  build.rs
app/src/: main.rs
enclave/: Cargo.toml  Enclave.edl
enclave/src/: lib.rs
